<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBar -->
    <include layout="@layout/_appbar" />

    <!-- Footer -->
    <include layout="@layout/_footer" />

    <RelativeLayout
        android:layout_below="@id/appbar"
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_all_layout">

        <LinearLayout
            android:layout_above="@id/btn_content"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_ci_advisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Label"
                android:text="@string/action_ci_advisor_enter" />

            <EditText
                android:id="@+id/txt_ci_advisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_ci_advisor"
                android:inputType="number" />

            <TextView
                android:id="@+id/lbl_citizenship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_ci_advisor"
                android:layout_marginTop="@dimen/margin_top_form_small"
                style="@style/Label"
                android:text="@string/action_citizenship_select" />

            <RadioGroup
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/grp_citizenship"
                android:layout_marginTop="@dimen/margin_all_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_citizenship"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/opt_citizenship_v"
                    style="@style/Message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/citizenship_local" />

                <RadioButton
                    android:id="@+id/opt_citizenship_e"
                    style="@style/Message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/opt_citizenship_v"
                    android:text="@string/citizenship_foreign" />
            </RadioGroup>

            <TextView
                android:id="@+id/lbl_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/grp_citizenship"
                android:layout_marginTop="@dimen/margin_top_form_small"
                style="@style/Label"
                android:text="@string/action_amount_enter" />

            <com.tekknow.bicentenario.tbcomplus.widget.AmountEditText
                android:id="@+id/input_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_amount"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/lbl_form_number"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_amount"
                android:layout_marginTop="@dimen/margin_top_form_small"
                android:text="@string/action_form_number_enter" />

            <EditText
                android:id="@+id/txt_form_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_form_number"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:layout_alignParentBottom="true">

            <com.tekknow.bicentenario.tbcomplus.widget.FocusableButton
                android:id="@+id/btn_accept"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_accept" />

            <Button
                android:id="@+id/btn_back"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onReturn"
                android:text="@string/txt_back" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>