<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBar -->
    <include layout="@layout/_appbar" />

    <!-- Footer -->
    <include layout="@layout/_footer" />

    <RelativeLayout
        android:layout_below="@id/appbar"
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_all_layout">

        <LinearLayout
            android:id="@id/btn_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true">

            <com.unidigital.bicentenario.tbcomplus.widget.FocusableButton
                android:id="@+id/btn_execute"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/txt_accept" />

            <Button
                android:id="@+id/btn_back"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onReturn"
                android:text="@string/txt_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_above="@id/btn_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Label"
                android:text="@string/action_transfer_amount_enter" />

            <com.unidigital.bicentenario.tbcomplus.widget.AmountEditText
                android:id="@+id/input_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/label_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_form"
                style="@style/Label"
                android:text="@string/action_deposit_enter_account" />

            <com.unidigital.bicentenario.tbcomplus.widget.AccountEditText
                android:id="@+id/input_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_ci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_form"
                style="@style/Label"
                android:text="@string/action_ci_enter" />

            <com.unidigital.bicentenario.tbcomplus.widget.IdEditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>