<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Footer -->
    <include
        android:id="@+id/footer"
        layout="@layout/_footer" />

    <RelativeLayout
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/btn_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_yes"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onAccept"
                android:text="@string/txt_accept" />

            <Button
                android:id="@+id/btn_no"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onCancel"
                android:text="@string/txt_back" />
        </LinearLayout>

        <TextView
            android:layout_above="@id/btn_content"
            android:id="@+id/label_are_you_sure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            style="@style/Label"
            android:text="@string/action_temporal_operations_closure_sure" />


    </RelativeLayout>

</RelativeLayout>