<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBar -->
    <include layout="@layout/_appbar" />

    <!-- Footer -->
    <include layout="@layout/_footer" />

    <RelativeLayout
        android:layout_below="@id/appbar"
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_all_layout">

        <LinearLayout
            android:id="@+id/btn_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_execute"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onPrint"
                android:text="@string/txt_print" />

            <Button
                android:id="@+id/btn_back"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onReturn"
                android:text="@string/txt_back" />
        </LinearLayout>

        <TextView
            android:layout_above="@id/btn_content"
            android:id="@+id/label_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_top_layout"
            style="@style/Message"
            android:text="@string/txt_last_query_info" />

    </RelativeLayout>

</RelativeLayout>