<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBar -->
    <include layout="@layout/_appbar" />

    <!-- Footer -->
    <include
        android:id="@+id/footer"
        layout="@layout/_footer" />

    <RelativeLayout
        android:layout_below="@id/appbar"
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_all_layout">

        <LinearLayout
            android:id="@id/btn_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_yes"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onAccept"
                android:text="@string/txt_accept" />

            <Button
                android:id="@+id/btn_no"
                style="@style/HomeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="onCancel"
                android:text="@string/txt_cancel" />

        </LinearLayout>

        <TextView
            android:layout_above="@id/btn_content"
            android:id="@+id/label_are_you_sure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/Label"
            android:text="@string/action_void_sure" />

    </RelativeLayout>
</RelativeLayout>